src/test/deca/codegen/valid/while/while-if-mod.deca
// Description :
//  Affiche les nombres pairs entre 1 et 10
// Résultats :
//    2
//    4
//    6
//    8
//    10
// Historique :
//    créé le 16/01/2025
{
    int i;
    i = 1;
    while (i <= 10) {
        if (i % 2 == 0) {
            println(i);
        }
        i = i + 1;
    }
}